version/0.12/_sources/API/visualization/_autosummary/ansys.aedt.core.visualization.report.field.Emission.rst.txt
Emission
========

.. currentmodule:: ansys.aedt.core.visualization.report.field

.. autoclass:: Emission

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      Emission.add_cartesian_x_marker
      
      
      Emission.add_cartesian_y_marker
      
      
      Emission.add_limit_line_from_equation
      
      
      Emission.add_limit_line_from_points
      
      
      Emission.add_note
      
      
      Emission.add_trace_to_report
      
      
      Emission.apply_report_template
      
      
      Emission.create
      
      
      Emission.delete
      
      
      Emission.delete_traces
      
      
      Emission.edit_general_settings
      
      
      Emission.edit_grid
      
      
      Emission.edit_header
      
      
      Emission.edit_legend
      
      
      Emission.edit_x_axis
      
      
      Emission.edit_x_axis_scaling
      
      
      Emission.edit_y_axis
      
      
      Emission.edit_y_axis_scaling
      
      
      Emission.export_config
      
      
      Emission.get_solution_data
      
      
      Emission.hide_legend
      
      
      Emission.import_traces
      
      
      Emission.jsonalize_tree
      
      
      Emission.suppress_all
      
      
      Emission.unsuppress_all
      
      
      Emission.update_expressions_with_defaults
      
      
      Emission.update_property
      
      
      Emission.update_trace_in_report
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      Emission.command
      Emission.differential_pairs
      Emission.domain
      Emission.expressions
      Emission.limit_lines
      Emission.matrix
      Emission.notes
      Emission.plot_name
      Emission.polyline
      Emission.primary_sweep
      Emission.primary_sweep_range
      Emission.properties
      Emission.reduced_matrix
      Emission.report_category
      Emission.report_type
      Emission.secondary_sweep
      Emission.secondary_sweep_range
      Emission.traces
      Emission.use_pulse_in_tdr
      Emission.variations
   
   